--- a/educacion.html
+++ b/educacion.html
@@ -61,7 +61,7 @@
           <input type="text" name="Institución" required>
         </p>
         <p>
-          <label for="place"><strong>Lugar:</strong></label>
+          <label for="location"><strong>Lugar:</strong></label>
           <textarea name="area_texto" rows="2" cols="26"></textarea>
         </p>
         <p>
